5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4529/executions/1670_2972.log
== SUBMITION (2019-04-16 18:42:27) 
-- CODE:
posição=int(input("posição   ")))
velocidade=float(input("velociade        "))
deslocamento=int(input("deslocamento        "))
x=posição+velocidade*deslocamento
a=1000
if(x>a) 
   print(x)
	print("Sim")
else	
   print(x)
	print("Não")
	
-- EXECUTION TIME:
0.167434
-- ERROR:
  File "/home/codebench/codes/1670/2972/main.py", line 1
    posi\xe7\xe3o=int(input()))
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:42:49) 
-- CODE:
posição=int(input("posição   ")))
velocidade=float(input("velociade        "))
deslocamento=int(input("deslocamento        "))
x=posição+velocidade*deslocamento
a=1000
if(x>a): 
   print(x)
	print("Sim")
else:	
   print(x)
	print("Não")
	
-- EXECUTION TIME:
0.143992
-- ERROR:
  File "/home/codebench/codes/1670/2972/main.py", line 1
    posi\xe7\xe3o=int(input()))
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:44:04) 
-- CODE:
posicao=int(input("posicao   "))
velocidade=float(input("velociade        "))
deslocamento=int(input("deslocamento        "))
x=posicao+velocidade*deslocamento
a=1000
if(x>a): 
   print(x)
	print("Sim")
else:	
   print(x)
	print("Não")
	
-- EXECUTION TIME:
0.154503
-- ERROR:
  File "/home/codebench/codes/1670/2972/main.py", line 8
    print("Sim")
               ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:44:40) 
-- CODE:
posicao=int(input("posicao   "))
velocidade=float(input("velociade        "))
deslocamento=int(input("deslocamento        "))
x=posicao+velocidade*deslocamento
a=1000
if(x>a): 
   print(x)
	print("Sim")
else:	
   print(x)
	print("Não")
	
-- ERROR:
File "XXXX", line 8
    print("Sim")
               ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:40) 
-- CODE:
posicao=int(input("posicao   "))
velocidade=float(input("velociade        "))
deslocamento=int(input("deslocamento        "))
x=posicao+velocidade*deslocamento
a=1000
if(x>a): 
   print(x)
	print("Sim")
else:	
   print(x)
	print("Não")
	
-- ERROR:
File "XXXX", line 8
    print("Sim")
               ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:46:11) 
-- CODE:
posicao=int(input("posicao   "))
velocidade=float(input("velociade        "))
deslocamento=int(input("deslocamento        "))
x=posicao+velocidade*deslocamento
a=1000
if(x>a): 
   print(x)
	
else:	
   print(x)
	print("Não")
	
-- ERROR:
File "XXXX", line 11
    print("Não")
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:46:25) 
-- CODE:
posicao=int(input("posicao   "))
velocidade=float(input("velociade        "))
deslocamento=int(input("deslocamento        "))
x=posicao+velocidade*deslocamento
a=1000
if(x>a): 
   print(x)
	
else:	
   print(x)
	
	
-- OUTPUT:
3002.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:47:09) 
-- CODE:
posicao=int(input("posicao   "))
velocidade=float(input("velociade        "))
deslocamento=int(input("deslocamento        "))
x=posicao+velocidade*deslocamento
a=1000
if(x>a): 
   print(x)
	print("Sim")
else:	
   print(x)
	print("Nao")
	
-- ERROR:
File "XXXX", line 8
    print("Sim")
               ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:48:09) 
-- CODE:
posicao=int(input("posicao   "))
velocidade=int(input("velociade        "))
deslocamento=int(input("deslocamento        "))
x=posicao+velocidade*deslocamento
a=1000
if(x>a): 
   print(x)
	print("Sim")
else:	
   print(x)
	print("Nao")
	
-- ERROR:
File "XXXX", line 8
    print("Sim")
               ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:49:28) 
-- CODE:
posicao=int(input("posicao   "))
velocidade=int(input("velociade      "))
deslocamento=int(input("deslocamento        "))
z=posicao+velocidade*deslocamento
a=1000
if(z>a): 
   print(z)
	print("Sim")
else:	
   print(z)
	print("Nao")
	
-- ERROR:
File "XXXX", line 8
    print("Sim")
               ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:51:47) 
-- CODE:
posicao=int(input("posicao   "))
velocidade=int(input("velociade      "))
deslocamento=int(input("deslocamento        "))
z=posicao+velocidade*deslocamento
a=1000
if(z>a):
	print(z)
	print("Sim")
else:
	print(z)
	print("Nao")
	
-- OUTPUT:
3002
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:51:49) 
-- CODE:
posicao=int(input("posicao   "))
velocidade=int(input("velociade      "))
deslocamento=int(input("deslocamento        "))
z=posicao+velocidade*deslocamento
a=1000
if(z>a):
	print(z)
	print("Sim")
else:
	print(z)
	print("Nao")
	
-- EXECUTION TIME:
0.136164
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
Sim
---- user output:
3002
Sim
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
Sim
---- user output:
4252
Sim
-- TEST CASE 3:
---- input:
5
50
15
---- correct output:
755
Nao
---- user output:
755
Nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
